# cuANN

./: CMakeLists.txt  FindThrust.cmake  LICENSE  README.md  TODO
samples/: abelone.cu  diabetes.cu  gene.cu  load_xor.cu  main.cu  mushroom.cu  robot.cu  soybean.cu  test.cu  thyroid.cu  xor.cu  xor_tanh.cu  xor_tanh_scaled.cu
src/: CMakeLists.txt
src/activation/: .sigmoid.cu.swp  .sigmoid.hpp.swp  activation.cu  activation.hpp
src/ann/: ann.cu  ann.hpp  ann.hxx  includes.ihh
src/data/: data.cu  data.hpp  includes.ihh
src/delta/: .delta_error.hpp.swp  delta.cu  delta.hpp  includes.ihh
src/dim_find/: dim_find.hpp
src/error/: error.cu  error.hpp
src/helpers/: helpers.hpp  includes.ihh
src/kernel/: includes.ihh  kernel.cu  kernel.hpp
src/logistic/: includes.ihh
src/pattern/: includes.ihh  pattern.cu  pattern.hpp
src/prg/: includes.ihh  prg.cu
src/prop/: prop.cu  prop.hpp
src/proto/: proto.hpp
src/sigmoid/: sigmoid.cu  sigmoid.hpp
src/sums/: .sum.cu.swp  includes.ihh  sums.cu  sums.hpp
src/trainer/: includes.ihh  trainer.cu  trainer.hpp  trainer.hxx  trainer_data.cu  trainer_data.hpp  trainer_pool.cu  trainer_pool.hpp
